themes/editorial/css/custom.css
/*# sourceMappingURL=custom.css.map */

/*************************/
/*******  home ***********/
/*************************/
.swipe-area {
    position: absolute;
    float: left;
    width: 2em;
    height: 100%;
}

.active:last-child {
    margin-right: -4em;
    background-color: #fff;
    padding: 0.8em!important;
    margin-left: -0.8em;
}


#sidebar nav a, #sidebar section a {
    text-transform: uppercase;
    font-weight: 700;
    letter-spacing: 0.1em;
    padding: 0.625em 0;
    display: block;
    border-bottom: none;
}

.news--Pictures{
    margin-bottom: 0.5em;
    margin-top: 0.5em;
}

.newsText--show-all {
    cursor: pointer;
    margin-bottom: 2em;
    display: inline-block;
    border: solid 1px black;
    padding-left: 0.5em;
    padding-right: 0.5em;
    transition: 300ms;
}

.newsText--show-all:hover {
    background-color: #da1200;
}


/* The Modal (background) */
.news--modal, #plan--modal{
    display: none; /* Hidden by default */
    position: fixed; /* Stay in place */
    z-index: 10001; /* Sit on top */
    padding-top: 50px; /* Location of the box */
    left: 0;
    top: 0;
    width: 100%; /* Full width */
    height: 100%; /* Full height */
    overflow: auto; /* Enable scroll if needed */
    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
}
#plan--modal{
    padding-top: 150px; /* Location of the box */
}

/* Modal Content */
.news--modal-content, #plan--modal-content{
    background-color: #fefefe;
    margin: auto;
    padding: 20px;
    border: 1px solid #888;
    max-width: 900px;
    margin-bottom: 100px;
}

#NewsModalScroll {
    overflow-y: auto;
}

/* modal obsah */
#News--submit-all {
    margin-right:5px;
}
.News--img-settings{
    height: 1.8em;
    border-radius: 0px;
    margin-right: 1.2em;
    position: relative;
    left: -1px;
}
.News--img-label, .News--img-settings, .News--img-delete-button{
    display: inline;
}
.News--img-label {
    white-space: nowrap;
}
.News--img-delete{
    width: 1.8em;
    padding: 0 0.6rem;
    display: inline-block;
}
#News--header {
    display: block;
    text-align: center;
    margin-top: 1rem;
    margin-bottom: 1rem;
}

#News--title{
    margin-bottom: 1rem;
    width: 100%;
}

#News--pictures{
    margin-bottom: 1rem;
    margin-top: 1rem;
    overflow: hidden;
    white-space: nowrap;
    margin-right: 20px;
}

#News--deleteButtonSpan, #News--close{
    float: right;
}

#News--form{
    margin: 0;
}
.CodeMirror, .CodeMirror-scroll {
    min-height: 200px;

}
/* uprava dropzone */
#NewsDropzone{
    margin-bottom: 1em;
    border-top-left-radius: 0px;
    border-top-right-radius: 0px;
    border-bottom-left-radius: .375em;
    border-bottom-right-radius: .375em;
}
.editor-toolbar{
    border-top-left-radius: .375em;
    border-top-right-radius: .375em;
}
.dropzone .dz-preview .dz-image {
    border-radius: 10px;
}
.dropzone{
    min-height: 0px;
}
/* nacitaci animace "..." */
.loader,
.loader:before,
.loader:after {
    border-radius: 50%;
    width: 2.5em;
    height: 2.5em;
    -webkit-animation-fill-mode: both;
    animation-fill-mode: both;
    -webkit-animation: load7 1.8s infinite ease-in-out;
    animation: load7 1.8s infinite ease-in-out;
}
.loader {
    color: #252d33;
    font-size: 10px;
    margin: 3px auto;
    position: relative;
    text-indent: -9999em;
    -webkit-transform: translateZ(0);
    -ms-transform: translateZ(0);
    transform: translateZ(0);
    -webkit-animation-delay: -0.16s;
    animation-delay: -0.16s;
}
.loader:before,
.loader:after {
    content: '';
    position: absolute;
    top: 0;
}
.loader:before {
    left: -3.5em;
    -webkit-animation-delay: -0.32s;
    animation-delay: -0.32s;
}
.loader:after {
    left: 3.5em;
}
@-webkit-keyframes load7 {
    0%,
    80%,
    100% {
        box-shadow: 0 2.5em 0 -1.3em;
    }
    40% {
        box-shadow: 0 2.5em 0 0;
    }
}
@keyframes load7 {
    0%,
    80%,
    100% {
        box-shadow: 0 2.5em 0 -1.3em;
    }
    40% {
        box-shadow: 0 2.5em 0 0;
    }
}

/*********************************/
/**** pravidelne treninky ********/
/*********************************/

@media screen and (min-width: 64em){
    #tables{
        order: 1;
    }
    #control{
        order: 2;
    }
}
.meetup input {
    width: 4.8em;
}
.weeklyHeader{
    color: white;
    font-weight: bold;
    font-size: 120%;
    background-color: #252d33;
}
.addAfter{
    text-align: center;
}
.delete {
    padding-left: 0.2em;
}


/************/
/* kontakty */
/************/
.contact--divInner {
    border: dotted;
    padding: 3em 4em 1em 4em;
    min-width: 18.3em;
    position: relative;
    align-content: center;
    width: 90%;
    margin: 0 auto;
    margin-bottom: 3em;
    height: 95%;
}
.contact-trainer {
    display: flex;
    align-items: flex-start;
    gap: 1em;
    margin-bottom: 1em;
}
.contact-trainer__photo {
    width: 80px;
    height: 80px;
    object-fit: cover;
    flex-shrink: 0;
}
.contact-trainer__info {
    flex: 1;
    min-width: 0;
}
.contact-trainer__info h4 {
    margin-top: 0;
}
/* sponzori */
.sponsors--img {
    padding: 10%;
    margin: 0 auto;
}

/* polaris */
.polaris {
  background: #fff;
  position: relative;
  margin: 10%;
}

.polaris,
.polaris::before,
.polaris::after {
  box-shadow: 1px 1px 1px rgba(0,0,0,0.25);
  border: 1px solid #bbb;
}

.polaris::before,
.polaris::after {
  content: "";
  position: absolute;
  width: 100%;
  height: 100%;
  background-color: #eee;
}

/* Second sheet of polaris */
.polaris::before {
    left: 7px;
    top: 5px;
    z-index: -1;
  }
  
/* Third sheet of polaris */
.polaris::after {
  left: 12px;
  top: 10px;
  z-index: -2;
}

.polaris--delete{
    text-align: center;
    background-color: #f56a6a;
    cursor: pointer;
}

/* edit event */
#editEvent input, #editEvent textarea{
    width:100%;
    overflow: hidden;
    resize: none;
  }
#date1:invalid{
	color:red;
}

/* default--groups-header */
/* default--plan-header */
.groups--header.current, .plan--header.current{
    color: #222;
}
.groups--header , .plan--header{
    border-bottom: none;
    color: #999;
    font-size: 2.8vw;
}
/***********************
********** plan ********
***********************/
#plan--select-template, #plan--save-template{
    float: right;
}

#planEdit tr:hover{
    background-color: #ff4040 !important;
}


/* login section */
#auth{
    font-size: 1rem;
}
a.logout{
    font-size: 1rem !important;
}

/* definition list */
dt {
    float: left;
    text-align: right;
    width: 6em;
  }

dd {
    padding-left: 6rem;
    margin-left: 1em;
    margin-bottom: 2em;
  }
/* seznam map api fix */
#map img {
    max-width: none; 
}
#map button.plus, #map button.minus{
	color: #6b7580 !important;
	height: initial;
	border-radius: 0;
	box-shadow: none;
}

#main {
    position: relative;
}


@media screen and (min-width: 1280px) {
    #sidebar .toggle::before, #sidebar .toggle {
        display: none; 
    }
}



#sidebar > .inner > * {
    border-bottom: none;
}

/* tabs */
.tab-folder > .tab-content:target ~ .tab-content:last-child, .tab-folder > .tab-content {
    display: none;
}
.tab-folder > :last-child, .tab-folder > .tab-content:target {
    display: block;
}


#sidebar > .inner {
    scrollbar-width: none; /*For Firefox*/
    -ms-overflow-style: none; /*For IE and Edge*/
}

#sidebar > .inner::-webkit-scrollbar {
width: 0px; /*For Chrome, Safari and Opera*/
}

#sidebar hr {
    margin: 1.2em 0;
}

/* swipe */
.slideout-menu {
  position: fixed;
  top: 0;
  bottom: 0;
  width: 0;
  min-height: 100vh;
  overflow-y: scroll;
  -webkit-overflow-scrolling: touch;
  z-index: 0;
  display: none !important;
}

.slideout-menu-left {
  left: 0;
}

.slideout-menu-right {
  right: 0;
}

.slideout-panel {
  position: relative;
  z-index: 1;
  will-change: transform;
  background-color: #FFF; /* A background-color is required */
  min-height: 100vh;
}

.slideout-open,
.slideout-open body,
.slideout-open .slideout-panel {
  overflow: hidden;
}

.slideout-open .slideout-menu {
  display: block !important;
}
@media screen and (min-width: 1280px) {
  .slideout-panel {
    margin-left: 0;
  }

  .slideout-menu {
    display: block !important;
  }
}


.dim {
    width: 100%;
    height: 100%;
    z-index: 2;
    display: none;
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    background: rgba(0,0,0,0.4);
  }

#main {
    overflow-y: hidden;
}

img {
    display: block;
    max-width: 100%;
    height: auto;
}   



@media screen and (min-width: 736px) {
    #hop, #hip {
        display: none; 
    }
}

p + ul {
    margin-top: -1em;
}
ul {
    margin: 0 0 1em 0;
}
p {
    margin: 0 0 1em 0;
}

#sidebar a.sneaky{
    color: #555
}

.external-link:after {
    content: "\f08e";
    font-family: FontAwesome;
    display: inline-block;
    font-size: smaller;
    padding-left: 5px;
  }

.notyf { top: 3.5rem}


.login-form input {
    width: 100%;
}

/* contact photo lightbox */
#contact-lightbox {
    display: none;
    position: fixed;
    z-index: 10002;
    left: 0;
    top: 0;
    width: 100vw;
    height: 100vh;
    background-color: rgba(0,0,0,0.8);
    cursor: pointer;
}
#contact-lightbox img {
    display: block;
    max-width: 90%;
    max-height: 90vh;
    margin: 5vh auto;
    border-radius: 8px;
}
#contact-lightbox .lightbox-close {
    position: absolute;
    top: 20px;
    right: 30px;
    color: #fff;
    font-size: 2.5rem;
    font-weight: bold;
    cursor: pointer;
    line-height: 1;
}
.contact-photo-link {
    cursor: pointer;
}

